==> aabzel/trunk/source/mcal/mcal_at32f4/usb/usb_host/Target/usbh_conf.c <==
#include "usb_drv.h"
#include "usbh_core.h"
#include "usbh_platform.h"

void HAL_HCD_MspInit(HCD_HandleTypeDef* hcdHandle) {
    GPIO_InitTypeDef GPIO_InitStruct = {0};
    if(USB_OTG_FS==hcdHandle->Instance ) {
        __HAL_RCC_GPIOA_CLK_ENABLE();
        /**USB_OTG_FS GPIO Configuration
         PA9     ------> USB_OTG_FS_VBUS
         PA11     ------> USB_OTG_FS_DM
         PA12     ------> USB_OTG_FS_DP
         */
        GPIO_InitStruct.Pin = GPIO_PIN_9;
        GPIO_InitStruct.Mode = GPIO_MODE_INPUT;
        GPIO_InitStruct.Pull = GPIO_NOPULL;
        HAL_GPIO_Init(GPIOA, &GPIO_InitStruct);

        GPIO_InitStruct.Pin = GPIO_PIN_11 | GPIO_PIN_12;
        GPIO_InitStruct.Mode = GPIO_MODE_AF_PP;
        GPIO_InitStruct.Pull = GPIO_NOPULL;
        GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
        GPIO_InitStruct.Alternate = GPIO_AF10_OTG_FS;
        HAL_GPIO_Init(GPIOA, &GPIO_InitStruct);

        __HAL_RCC_USB_OTG_FS_CLK_ENABLE();

        HAL_NVIC_SetPriority(OTG_FS_IRQn, 0, 0);
        HAL_NVIC_EnableIRQ(OTG_FS_IRQn);
    }

    if(USB_OTG_HS==hcdHandle->Instance) {
        __HAL_RCC_GPIOA_CLK_ENABLE();
        __HAL_RCC_GPIOB_CLK_ENABLE();
        /**USB_OTG_HS GPIO Configuration
        PA9     ------> USB_OTG_HS_VBUS
        PB14     ------> USB_OTG_HS_DM
        PB15     ------> USB_OTG_HS_DP
        */
        GPIO_InitStruct.Pin = GPIO_PIN_9;
        GPIO_InitStruct.Mode = GPIO_MODE_INPUT;
        GPIO_InitStruct.Pull = GPIO_NOPULL;
        HAL_GPIO_Init(GPIOA, &GPIO_InitStruct);

        GPIO_InitStruct.Pin = GPIO_PIN_14 | GPIO_PIN_15;
        GPIO_InitStruct.Mode = GPIO_MODE_AF_PP;
        GPIO_InitStruct.Pull = GPIO_NOPULL;
        GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
        GPIO_InitStruct.Alternate = GPIO_AF12_OTG_HS_FS;
        HAL_GPIO_Init(GPIOB, &GPIO_InitStruct);

        /* Peripheral clock enable */
        __HAL_RCC_USB_OTG_HS_CLK_ENABLE();

        /* Peripheral interrupt init */
        HAL_NVIC_SetPriority(OTG_HS_EP1_OUT_IRQn, 0, 0);
        HAL_NVIC_EnableIRQ(OTG_HS_EP1_OUT_IRQn);
        HAL_NVIC_SetPriority(OTG_HS_EP1_IN_IRQn, 0, 0);
        HAL_NVIC_EnableIRQ(OTG_HS_EP1_IN_IRQn);
        HAL_NVIC_SetPriority(OTG_HS_IRQn, 0, 0);
        HAL_NVIC_EnableIRQ(OTG_HS_IRQn);
    }
}

void HAL_HCD_MspDeInit(HCD_HandleTypeDef* hcdHandle) {
    if(USB_OTG_FS==hcdHandle->Instance) {
        __HAL_RCC_USB_OTG_FS_CLK_DISABLE();
        /**USB_OTG_FS GPIO Configuration
         PA9     ------> USB_OTG_FS_VBUS
         PA11     ------> USB_OTG_FS_DM
         PA12     ------> USB_OTG_FS_DP
         */
        HAL_GPIO_DeInit(GPIOA, GPIO_PIN_9 | GPIO_PIN_11 | GPIO_PIN_12);

        HAL_NVIC_DisableIRQ(OTG_FS_IRQn);
    }

    if(USB_OTG_HS==hcdHandle->Instance) {
        __HAL_RCC_USB_OTG_HS_CLK_DISABLE();

        /**USB_OTG_HS GPIO Configuration
        PA9     ------> USB_OTG_HS_VBUS
        PB14     ------> USB_OTG_HS_DM
        PB15     ------> USB_OTG_HS_DP
        */
        HAL_GPIO_DeInit(GPIOA, GPIO_PIN_9 );
        HAL_GPIO_DeInit(GPIOB, GPIO_PIN_14 | GPIO_PIN_15);

        HAL_NVIC_DisableIRQ(OTG_HS_EP1_OUT_IRQn);
        HAL_NVIC_DisableIRQ(OTG_HS_EP1_IN_IRQn);
        HAL_NVIC_DisableIRQ(OTG_HS_IRQn);
    }
}

USBH_StatusTypeDef USBH_LL_Init(USBH_HandleTypeDef* phost) {
    USBH_StatusTypeDef usb_ret = USBH_FAIL;
    HAL_StatusTypeDef ret = HAL_ERROR;

    if(HOST_FS==phost->id) {
        /* Link the driver to the stack. */
        UsbHandle_t* UsbNode = UsbGetNodeBySpeed(USB_SPEED_FS);
        UsbNode->hhcd_USB_OTG.pData = phost;
        phost->pData = &UsbNode->hhcd_USB_OTG;

        UsbNode->hhcd_USB_OTG.Instance = USB_OTG_FS;
        UsbNode->hhcd_USB_OTG.Init.Host_channels = 8;
        UsbNode->hhcd_USB_OTG.Init.speed = HCD_SPEED_FULL;
        UsbNode->hhcd_USB_OTG.Init.dma_enable = DISABLE;
        UsbNode->hhcd_USB_OTG.Init.phy_itface = HCD_PHY_EMBEDDED;
        UsbNode->hhcd_USB_OTG.Init.Sof_enable = DISABLE;

        ret = HAL_HCD_Init(&UsbNode->hhcd_USB_OTG);
        if(HAL_OK != ret) {
            usb_ret = USBH_FAIL;
        } else {
            usb_ret = USBH_OK;
        }

        if(HAL_OK == ret) {
            USBH_LL_SetTimer(phost, HAL_HCD_GetCurrentFrame(&UsbNode->hhcd_USB_OTG));
        }
    }

    if(HOST_HS==phost->id) {
        /* Link the driver to the stack. */
        UsbHandle_t* UsbNode = UsbGetNodeBySpeed(USB_SPEED_HS);
        if(UsbNode) {
            UsbNode->hhcd_USB_OTG.pData = phost;
            phost->pData = &UsbNode->hhcd_USB_OTG;

            UsbNode->hhcd_USB_OTG.Instance = USB_OTG_HS;
            UsbNode->hhcd_USB_OTG.Init.Host_channels = 12;
            UsbNode->hhcd_USB_OTG.Init.speed = HCD_SPEED_FULL;
            UsbNode->hhcd_USB_OTG.Init.dma_enable = DISABLE;
            UsbNode->hhcd_USB_OTG.Init.phy_itface = USB_OTG_EMBEDDED_PHY;
            UsbNode->hhcd_USB_OTG.Init.Sof_enable = DISABLE;
            UsbNode->hhcd_USB_OTG.Init.low_power_enable = DISABLE;
            UsbNode->hhcd_USB_OTG.Init.vbus_sensing_enable = DISABLE;
            UsbNode->hhcd_USB_OTG.Init.use_external_vbus = DISABLE;
            ret = HAL_HCD_Init(&UsbNode->hhcd_USB_OTG);
            if(HAL_OK != ret) {
                usb_ret = USBH_FAIL;
            } else {
                usb_ret = USBH_OK;
            }

            if(HAL_OK == ret) {
                USBH_LL_SetTimer(phost, HAL_HCD_GetCurrentFrame(&UsbNode->hhcd_USB_OTG));
            }
        }
    }
    return usb_ret;
}

USBH_StatusTypeDef USBH_LL_DriverVBUS(USBH_HandleTypeDef* phost, uint8_t state) {
    if(phost->id == HOST_FS) {
        MX_DriverVbusFS(state);
    }

    /* USER CODE BEGIN 0 */

    /* USER CODE END 0*/

    if(phost->id == HOST_HS) {
        if(state == 0) {
            /* Drive high Charge pump */
            /* ToDo: Add IOE driver control */
            /* USER CODE BEGIN DRIVE_HIGH_CHARGE_FOR_HS */

            /* USER CODE END DRIVE_HIGH_CHARGE_FOR_HS */
        } else {
            /* Drive low Charge pump */
            /* ToDo: Add IOE driver control */
            /* USER CODE BEGIN DRIVE_LOW_CHARGE_FOR_HS */

            /* USER CODE END DRIVE_LOW_CHARGE_FOR_HS */
        }
    }
    HAL_Delay(200);
    return USBH_OK;
}
